--- a/.github/workflows/allinone.yml
+++ b/.github/workflows/allinone.yml
@@ -187,7 +187,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(streamlink --default-stream best --stream-url https://www.youtube.com/watch?v=UK81GCw1KE8)
+        $(streamlink --http-proxy "socks5h://jdes6209:EgXe53xPNF@181.215.45.238:50101" --default-stream best --stream-url https://www.youtube.com/watch?v=UK81GCw1KE8)
         EOL
 #公視X
     - name: Get yt_ptslivestream.m3u8
@@ -197,7 +197,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(streamlink --default-stream best --stream-url https://www.youtube.com/@ptslivestream/live)
+        $(streamlink --http-proxy "socks5h://jdes6209:EgXe53xPNF@181.215.45.238:50101" --default-stream best --stream-url https://www.youtube.com/@ptslivestream/live)
         EOL
 ############################################################################################################
 ############################################bilbil##############################################################
